re-worded portfolio description

--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
               <br />
               <br />
               I'm enjoy creating things, refining them, and making them better.
-              I am great at working independently and with others, and am
-              looking forward to working with a team that shares similar values.
+              I am great at working independently and with others, and look
+              forward to working with a team that shares similar values.
             </p>
             <div class="all-buttons">
               <div class="hero-button">
@@ -301,8 +301,8 @@
             <h4>SMARTBRAIN FACE RECOGNITION</h4>
             <p>
               Smartbrain can detect faces in your photographs! If you are
-              curious, paste an image link and and see if Smartbrain's REST API
-              can magically locate those faces!
+              curious, paste an image link and and see if Smartbrain's RESTful
+              API can magically locate those faces!
             </p>
             <div class="project-icons-container mb-4">
               <img class="icons-used" src="./icons/html-5-100.png" />
@@ -368,7 +368,7 @@
             <p>
               Keep this shopping list handy to add, remove, or check off items
               on your next grocery run! Built entirely with HTML, CSS and
-              JAVASCRIPT, this app combines a colorful design with practical
+              JavaScript, this app combines a colorful design with practical
               functionality that will look beautiful on any device.
             </p>
             <div class="project-icons-container mb-4">
@@ -549,7 +549,7 @@
             <h4>CARROTS COOKING</h4>
             <p>
               This UX Design project was built as a mobile-first app for kids
-              that love cooking! The title was playfully titled "Carrots" with
+              that love to cook! The title was playfully titled "Carrots" with
               kids in mind, and underwent two usability studies to achieve the
               final result. All wireframes and mockups were created with Figma
               and responsive, with designs fitted to mobile, tablet and
@@ -587,9 +587,9 @@
             <h4>BOUTIQUEAPP</h4>
             <p>
               If you want a clean design with easy checkout, take a look at this
-              UX Design project, BoutiqueApp! It features mockups with Figma and
-              includes a simple color scheme with clear buttons so users are
-              certain on the navigation.
+              UX Design project, BoutiqueApp! It features mockups built with
+              Figma and includes a simple color scheme with clear buttons so
+              users are certain on the navigation.
             </p>
             <div class="project-icons-container mb-4">
               <img class="icons-used" src="./icons/ux-design-100.png" />
@@ -622,11 +622,12 @@
             <h4>PETCONNECT</h4>
             <p>
               A UX Design project created with Adobe XD that aims to allow users
-              to browse online and schedule a time to see a pet they are
-              interested in. The goal was to design a website with clear
-              navigation with all the details a potential pet owner would like
-              to see. Going through usability studies, the design went though a
-              few iterations in order to iron out pain points.
+              to browse PetConnect - a pet adoption vicinity - online and
+              schedule a time to visit a pet they are interested in. This
+              desktop-first design features clear navigation with all the
+              details a potential pet owner would like to see. Going through
+              usability studies, the design went though a few iterations in
+              order to iron out pain points.
             </p>
             <div class="project-icons-container mb-4">
               <img class="icons-used" src="./icons/ux-design-100.png" />
@@ -659,7 +660,7 @@
     <div id="contact-id" class="contact-all">
       <div class="container">
         <h3 class="about-header">CONTACT</h3>
-        <h3 class="about-title text-center mb-5">
+        <h3 class="about-title text-center mb-4">
           Connect with me<span class="dot">!</span>
         </h3>
 
@@ -737,9 +738,9 @@
           </div>
           <div class="col-xl-6 contact-icon-links">
             <h4 class="text-center mb-3">SOCIAL LINKS</h4>
-            <h6 class="text-center">
+            <p class="text-center">
               You can also find me in these social spaces!
-            </h6>
+            </p>
             <div class="d-flex justify-content-center contact-social-links">
               <div class="linkedin-section">
                 <span>
