updated email form captcha to true

--- a/index.html
+++ b/index.html
@@ -728,7 +728,7 @@
                 name="_subject"
                 value="New submission from website!"
               />
-              <input type="hidden" name="_captcha" value="false" />
+              <!-- <input type="hidden" name="_captcha" value="false" /> -->
               <input
                 type="hidden"
                 name="_autoresponse"
