--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
             <h4>WEATHER APP</h4>
             <p>
               If you're heading to another city and want to check the weather
-              forecast there, look no furher! Weather App uses an API that
+              forecast there, look no further! Weather App uses an API that
               allows you to enter a city and view the current conditions and
               forecast for the week!
             </p>
