updated resume oct 2022

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             <div class="all-buttons">
               <div class="hero-button">
                 <a
-                  href="./img/resume-website.pdf"
+                  href="./img/frontend-resume-oct-2022.pdf"
                   class="resume-button-home hero-button-portfolio"
                   target="_blank"
                 >
