--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
               >'s ZTM
               <br />
               <br />
-              I enjoy creating things, refining them, and making them better. I
+              I
               am great at working independently and with others, and look
               forward to working with a team that shares similar values.
             </p>
@@ -208,7 +208,7 @@
         </h3>
         <div class="skills-container">
           <!-- ROW 1 -->
-          <div class="row mb-4 d-flex justify-content-center icon-row fade-row">
+          <div class="row d-flex justify-content-center icon-row fade-row">
             <div class="icon-container col-xl col-lg-2 col-md-4 col-sm-4">
               <img class="icon" src="./icons/html-5-100.png" />
               <span class="icon-text">HTML</span>
@@ -235,7 +235,7 @@
             </div>
           </div>
           <!-- ROW 2 -->
-          <div class="row mb-4 d-flex justify-content-center icon-row fade-row">
+          <div class="row d-flex justify-content-center icon-row fade-row">
             <div class="icon-container col-xl col-lg-2 col-md-4">
               <img class="icon" src="./icons/visual-studio-100.png" />
               <span class="icon-text">VS CODE</span>
@@ -262,7 +262,7 @@
             </div>
           </div>
           <!-- ROW 3 -->
-          <div class="row mb-4 d-flex justify-content-center icon-row fade-row">
+          <div class="row d-flex justify-content-center icon-row fade-row">
             <div class="icon-container col-xl col-lg-2 col-md-4">
               <img class="icon" src="./icons/terminal-100.png" />
               <span class="icon-text">TERMINAL</span>
@@ -289,7 +289,7 @@
             </div>
           </div>
           <!-- ROW 4 -->
-          <div class="row mb-4 d-flex justify-content-center icon-row fade-row">
+          <div class="row d-flex justify-content-center icon-row fade-row">
             <div class="icon-container col-xl col-lg-2 col-md-4">
               <img class="icon" src="./icons/icons8-php-logo-100.png" />
               <span class="icon-text">PHP</span>
@@ -332,13 +332,14 @@
           <h3 class="about-title mb-5">
             Some projects I built<span class="dot">.</span>
           </h3>
-          <div
+
+            <div
             class="slide-in from-left portfolio-individual-text col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12"
           >
             <h4>SMARTBRAIN FACE RECOGNITION</h4>
             <p class="project-paragraph">
               Smartbrain can detect faces in your photographs! If you are
-              curious, paste an image link and and see if Smartbrain's RESTful
+              curious, paste an image link and see if Smartbrain's RESTful
               API can magically locate those faces!
             </p>
             <div class="project-icons-container mb-4">
@@ -372,7 +373,9 @@
               class="portfolio-img-update img-fluid"
               src="./img/smartbrain-img-july.png"
             />
+          
           </div>
+          
         </div>
         <!-- INDIVIDUAL PROJECT ----------------->
         <!-- <div class="row portfolio-each-project">
@@ -586,7 +589,7 @@
             <h4>CARROTS COOKING</h4>
             <p class="project-paragraph">
               This UX Design project was built as a mobile-first app for kids
-              that love to cook! The title was playfully titled "Carrots" with
+              that love to cook! The app was playfully titled "Carrots" with
               kids in mind, and underwent two usability studies to achieve the
               final result. All wireframes and mockups were created with Figma
               and responsive, with designs fitted to mobile, tablet and
