updated resume and nav link

--- a/index.html
+++ b/index.html
@@ -83,6 +83,14 @@
           <li class="nav-item">
             <a class="nav-link" href="#contact-id">CONTACT</a>
           </li>
+          <li class="nav-item">
+            <a
+              class="nav-link nav-resume"
+              href="./img/danielle-oda-resume-may-2023.pdf"
+              target="_blank"
+              >RESUME</a
+            >
+          </li>
         </ul>
       </div>
     </nav>
@@ -185,7 +193,7 @@
             <div class="all-buttons">
               <div class="hero-button">
                 <a
-                  href="./img/danielle-oda-resume.pdf"
+                  href="./img/danielle-oda-resume-may-2023.pdf"
                   class="resume-button-home hero-button-portfolio resume"
                   target="_blank"
                 >
